@@ -21,6 +21,30 @@
     <td>
       <dl>
 
+
+<dt><b>LilyPond 2.7.7 is out</b> - <em>August 22, 2005</em></dt>
+
+<dd>
+This release has a rewriting of tie formatting which was sponsored by
+Bertalan Fodor, Jay Hamilton, Kieren MacMillan, Steve Doonan, Trevor
+Baca, and Vicente Solsona
+Dell&aacute;. (<a
+href="@DOC@v2.7/Documentation/topdocs/out-www/NEWS.html">Changes</a>,
+<a href="install/#2.7">Download</a>)
+</dd>
+
+
+<dt><b>LilyPond 2.7.6 is out</b> - <em>August 19, 2005</em></dt>
+
+<dd>
+This release adds support for numbered percent repeats, a feature
+sponsored by Yoshinobu Ishizaki. It also has bugfixes for clashes
+between slurs and symbols, like fingers dynamic
+signs. (<a
+href="@DOC@v2.7/Documentation/topdocs/out-www/NEWS.html">Changes</a>,
+<a href="install/#2.7">Download</a>)
+</dd>
+
 <dt><b>LilyPond 2.7.5 is out</b> - <em>August 16, 2005</em></dt>
 
 <dd>
