@@ -1,3 +1,7 @@
+2005-09-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/news.ihtml (href): trim
+
 2005-09-03  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* TRANSLATION (LANG): Move documentation.html to category 3,
